--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "entremalhas",
+  "name": "next.js-template",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "npm run clean && next build",
+    "start": "npm run clean && next start",
+    "lint": "eslint src/**/*.{ts,tsx} --max-warnings=0 --fix",
+    "format": "prettier --write src/**/*.{ts,tsx}",
+    "analyzer": "ANALYZE=true next build",
+    "prepare": "husky install",
+    "clean": "rimraf .next"
   },
   "dependencies": {
-    "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "@types/woocommerce__woocommerce-rest-api": "^1.0.2",
+    "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
@@ -21,5 +29,23 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@axe-core/react": "^4.7.2",
+    "@next/bundle-analyzer": "^13.4.4",
+    "@rocketseat/eslint-config": "^1.2.0",
+    "@types/node": "^18.16.16",
+    "daisyui": "^3.0.18",
+    "eslint-plugin-tailwindcss": "^3.12.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8",
+    "rimraf": "^5.0.1"
+  },
+  "lint-staged": {
+    "*.{ts,js}": [
+      "npm run format",
+      "npm run lint"
+    ]
   }
 }
